@@ -20,7 +20,7 @@
 package com.exedio.cope.live;
 
 import static com.exedio.cops.XMLEncoder.encode;
-import static com.exedio.cope.live.Editor.AVOID_COLLISION;
+import static com.exedio.cope.live.LiveServlet.AVOID_COLLISION;
 
 import java.util.ArrayList;
 
@@ -147,7 +147,7 @@ final class Bar_Jspm
 			var previousBorder = null;
 			var previousModifiable = false;
 			
-			function <%=Editor.EDIT_METHOD_LINE%>(border,feature,item,value,modifiable)
+			function <%=LiveServlet.EDIT_METHOD_LINE%>(border,feature,item,value,modifiable)
 			{
 				if(previousBorder==border)
 					return true;
@@ -172,7 +172,7 @@ final class Bar_Jspm
 				
 				return false;
 			}
-			function <%=Editor.EDIT_METHOD_FILE%>(border,feature,item,value,modifiable)
+			function <%=LiveServlet.EDIT_METHOD_FILE%>(border,feature,item,value,modifiable)
 			{
 				if(previousBorder==border)
 					return true;
@@ -197,7 +197,7 @@ final class Bar_Jspm
 				
 				return false;
 			}
-			function <%=Editor.EDIT_METHOD_AREA%>(border,feature,item,value,modifiable)
+			function <%=LiveServlet.EDIT_METHOD_AREA%>(border,feature,item,value,modifiable)
 			{
 				if(previousBorder==border)
 					return true;
@@ -250,12 +250,12 @@ final class Bar_Jspm
 		%>
 		<div id="contentEditorBar" style="right:20px;">
 			<form action="<%=action%>" method="POST" id="contentEditorBarSwitches">
-				<input type="hidden" name="<%=Editor.BAR_REFERER%>" value="<%=referer%>">
+				<input type="hidden" name="<%=LiveServlet.BAR_REFERER%>" value="<%=referer%>">
 				<input type="image" name="<%=borderToggleParameter%>" src="<%=borderButtonURL%>" width="63" height="21" alt="<%if(borders){%>Dis<%}else{%>En<%}%>able Borders">
 				<img src="<%=hideButtonURL%>" onclick="document.getElementById('contentEditorBar').style.display = 'none';" width="21" height="21">
-				<input type="image" name="<%=Editor.BAR_CLOSE%>" src="<%=closeButtonURL%>" alt="Close Live Edit" width="21" height="21">
+				<input type="image" name="<%=LiveServlet.BAR_CLOSE%>" src="<%=closeButtonURL%>" alt="Close Live Edit" width="21" height="21">
 			</form>
-			<h1><a href="<%=action%>?<%=Editor.PREVIEW_OVERVIEW%>=t" target="Live Edit">COPE Live Edit</a></h1><%
+			<h1><a href="<%=action%>?<%=LiveServlet.PREVIEW_OVERVIEW%>=t" target="Live Edit">COPE Live Edit</a></h1><%
 			if(loginName!=null)
 			{
 			%>
@@ -264,8 +264,8 @@ final class Bar_Jspm
 			%>
 			<br>
 			<form action="<%=action%>" method="POST" style="display:inline;">
-				<input type="hidden" name="<%=Editor.BAR_REFERER%>" value="<%=referer%>">
-				<select name="<%=Editor.BAR_SWITCH_TARGET%>" onchange="this.form.submit();"><%
+				<input type="hidden" name="<%=LiveServlet.BAR_REFERER%>" value="<%=referer%>">
+				<select name="<%=LiveServlet.BAR_SWITCH_TARGET%>" onchange="this.form.submit();"><%
 				for(final Target t : targets)
 				{
 					final boolean active = t.equals(target);
@@ -283,8 +283,8 @@ final class Bar_Jspm
 				final boolean live = target.isLive();
 			%>
 			<form action="<%=action%>" method="POST" style="display:inline;">
-				<input type="hidden" name="<%=Editor.BAR_REFERER    %>" value="<%=referer%>">
-				<input type="submit" name="<%=Editor.BAR_SAVE_TARGET%>" value="<% if(live){%>Publish<%}else{%>Save<%} %><%
+				<input type="hidden" name="<%=LiveServlet.BAR_REFERER    %>" value="<%=referer%>">
+				<input type="submit" name="<%=LiveServlet.BAR_SAVE_TARGET%>" value="<% if(live){%>Publish<%}else{%>Save<%} %><%
 					if(modificationsCount>1)
 					{
 						%> (<%=modificationsCount%>)<%
@@ -306,33 +306,33 @@ final class Bar_Jspm
 			%>
 			<form action="<%=action%>" method="POST" id="<%=ID_LINE_FORM%>" style="display:none;">
 				<hr>
-				<input name="<%=   Editor.BAR_REFERER%>" value="<%=referer     %>" type="hidden">
-				<input name="<%=   Editor.BAR_FEATURE%>" id="<%=ID_LINE_FEATURE%>" type="hidden">
-				<input name="<%=   Editor.BAR_ITEM   %>" id="<%=ID_LINE_ITEM   %>" type="hidden">
-				<input name="<%=   Editor.BAR_TEXT   %>" id="<%=ID_LINE_VALUE  %>" class="text" onkeyup="return <%=ONKEY_METHOD_LINE%>(this);">
+				<input name="<%=   LiveServlet.BAR_REFERER%>" value="<%=referer     %>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_FEATURE%>" id="<%=ID_LINE_FEATURE%>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_ITEM   %>" id="<%=ID_LINE_ITEM   %>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_TEXT   %>" id="<%=ID_LINE_VALUE  %>" class="text" onkeyup="return <%=ONKEY_METHOD_LINE%>(this);">
 				<br>
-				<input type="submit" value="Publish Now!" id="<%=ID_LINE_PUBLISH%>" name="<%=Editor.BAR_PUBLISH_NOW%>" class="publishNow">
+				<input type="submit" value="Publish Now!" id="<%=ID_LINE_PUBLISH%>" name="<%=LiveServlet.BAR_PUBLISH_NOW%>" class="publishNow">
 				<input type="submit" value="Apply"        id="<%=ID_LINE_APPLY%>">
 			</form>
 			<form action="<%=action%>" method="POST" id="<%=ID_FILE_FORM%>" style="display:none;" enctype="multipart/form-data">
 				<hr>
 				<img id="<%=ID_FILE_VALUE%>" src="">
-				<input name="<%=   Editor.BAR_REFERER%>" value="<%=referer     %>" type="hidden">
-				<input name="<%=   Editor.BAR_FEATURE%>" id="<%=ID_FILE_FEATURE%>" type="hidden">
-				<input name="<%=   Editor.BAR_ITEM   %>" id="<%=ID_FILE_ITEM   %>" type="hidden">
-				<input name="<%=   Editor.BAR_FILE   %>" type="file" class="text">
+				<input name="<%=   LiveServlet.BAR_REFERER%>" value="<%=referer     %>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_FEATURE%>" id="<%=ID_FILE_FEATURE%>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_ITEM   %>" id="<%=ID_FILE_ITEM   %>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_FILE   %>" type="file" class="text">
 				<br>
-				<input type="submit" value="Publish Now!" id="<%=ID_FILE_PUBLISH%>" name="<%=Editor.BAR_PUBLISH_NOW%>" class="publishNow">
+				<input type="submit" value="Publish Now!" id="<%=ID_FILE_PUBLISH%>" name="<%=LiveServlet.BAR_PUBLISH_NOW%>" class="publishNow">
 				<input type="submit" value="Apply"        id="<%=ID_FILE_APPLY%>">
 				<br>
 			</form>
 			<form action="<%=action%>" method="POST" id="<%=ID_AREA_FORM%>" style="display:none;">
 				<hr>
-				<input name="<%=   Editor.BAR_REFERER%>" value="<%=referer     %>" type="hidden">
-				<input name="<%=   Editor.BAR_FEATURE%>" id="<%=ID_AREA_FEATURE%>" type="hidden">
-				<input name="<%=   Editor.BAR_ITEM   %>" id="<%=ID_AREA_ITEM   %>" type="hidden">
-				<textarea name="<%=Editor.BAR_TEXT   %>" id="<%=ID_AREA_VALUE  %>" cols="100" rows="15">X</textarea>
-				<input type="submit" value="Publish Now!" id="<%=ID_AREA_PUBLISH%>" name="<%=Editor.BAR_PUBLISH_NOW%>" class="publishNow">
+				<input name="<%=   LiveServlet.BAR_REFERER%>" value="<%=referer     %>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_FEATURE%>" id="<%=ID_AREA_FEATURE%>" type="hidden">
+				<input name="<%=   LiveServlet.BAR_ITEM   %>" id="<%=ID_AREA_ITEM   %>" type="hidden">
+				<textarea name="<%=LiveServlet.BAR_TEXT   %>" id="<%=ID_AREA_VALUE  %>" cols="100" rows="15">X</textarea>
+				<input type="submit" value="Publish Now!" id="<%=ID_AREA_PUBLISH%>" name="<%=LiveServlet.BAR_PUBLISH_NOW%>" class="publishNow">
 				<input type="submit" value="Apply"        id="<%=ID_AREA_APPLY%>">
 			</form><%
 			}
